# cmake-quickstart

./: .gitmodules
fetch-content/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
generator-expression/: CMakeLists.txt  MainWindow.ui
